--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "mongodb": "^3.5.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "stripe": "^8.47.0"
   }
 }
